# GhostClient

./: .gitattributes  AddProfileDialog.qml  CMakeLists.txt  CoverImage.qml  FFplayHandler.cpp  FFplayHandler.h  FilterBar.qml  GhostClient.pro  GhostClient.rc  GhostClient.sln  GhostClient.vcxproj  GhostClient.vcxproj.filters  Login.cpp  Login.h  MediaFilterHandler.cpp  MediaFilterHandler.h  MediaPlayer.cpp  MediaPlayer.h  MediaPlayer.qml  Medium.cpp  Medium.h  NativeVideoWidget.h  Navigator.cpp  Navigator.h  Navigator.qml  PlayerControls.qml  PlayerView.qml  README.md  StartAnimation.qml  VLCPlayerHandler.cpp  VLCPlayerHandler.h  VideoOutput.qml  WindowManager.cpp  conf.ini  main.cpp  main.qml  nav.qml  packages.config  qml.qrc  resource.h  (+2 more)
